# advent-of-code

./: .gitignore  LICENSE  README.md
2016 Python/: day_1.py  main.py
2021 Bash/: main.sh
2021 Go/: day_1.go  main.go
2022/: README.md
2022 Elixir/: .gitignore  mix.exs
2022 Elixir/lib/: x2022.ex
2022/test/: x2022_test.exs
2023/: README.md  x2023.cabal
2023 Haskell/: x2023.cabal
2023 Haskell/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Lib.hs  Main.hs  day_1.hs  lib.hs
2024/: README.md
2024 Rust/src/: README.md  main.rs
2024/src/: day_1.rs
