cabal-version:      3.0
name:               x2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Nikita Revenco
maintainer:         154856872+NikitaRevenco@users.noreply.github.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable x2023
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day1 Day2 Lib

    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   src
    default-language: GHC2021
