cabal-version:      3.0
name:               x2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Nikita Revenco
maintainer:         154856872+NikitaRevenco@users.noreply.github.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable x2023
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day1 Day2 Day3 Day4 Day5 Day6 Day7 Day8 Day9 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20 Day21 Day22 Day23 Day24 Day25 Lib
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   src
    default-language: GHC2021
